# F2SE

./: CMakeLists.txt  F2SE.cpp  F2SE.h  HOOKING.md  Main.cpp  README.md
Common/: Types.h
Core/: ScriptExtender.cpp  ScriptExtender.h
Game/: CombatSystem.cpp  CombatSystem.h  GameAddresses.cpp  GameAddresses.h  GameManager.cpp  GameManager.h  GamePatcher.cpp  GamePatches.h  GameState.cpp  GameState.h  SkillSystem.cpp  SkillSystem.h
Hooks/: HookManager.h
Memory/: MemoryManager.cpp  MemoryManager.h
Plugin/: Plugin.cpp  Plugin.h  PluginAPI.cpp  PluginAPI.h  PluginManager.cpp  PluginManager.h  Version.cpp
Script/: Console.cpp  Console.h  EventManager.cpp  EventManager.h  ScriptEngine.cpp  ScriptEngine.h
